<resources>
    <string name="app_name">TouristAttractionsHW</string>
    <string name="title_home">Attraction</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_language">Language</string>

    <string name="attraction_address">Address\n%s</string>
    <string name="attraction_modify">Last Update Time\n%s</string>
    <string name="language_en">EN</string>
    <string name="language_ja">ja</string>
    <string name="language_zh_tw">繁體中文</string>
    <string name="language_zh_cn">简体中文</string>
    <string name="language_ko">ko</string>
    <string name="language_es">es</string>
    <string name="language_id">id</string>
    <string name="language_th">th</string>
    <string name="language_vi">vi</string>
</resources>