<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/language_zh_tw"
        android:title="@string/language_zh_tw"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_zh_cn"
        android:title="@string/language_zh_cn"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_en"
        android:title="@string/language_en"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_ja"
        android:title="@string/language_ja"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_ko"
        android:title="@string/language_ko"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_es"
        android:title="@string/language_es"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_id"
        android:title="@string/language_id"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_th"
        android:title="@string/language_th"
        app:showAsAction="always" />
    <item
        android:id="@+id/language_vi"
        android:title="@string/language_vi"
        app:showAsAction="always" />
</menu>