<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_attraction">

    <fragment
        android:id="@+id/navigation_attraction"
        android:name="com.mason.touristattractionshw.ui.attraction.AttractionListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_attraction_list" >

        <action
            android:id="@+id/navigation_attraction_detail"
            app:destination="@+id/navigation_attraction_detail"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_attraction_detail"
        android:name="com.mason.touristattractionshw.ui.attraction.AttractionDetailFragment"
        android:label="@string/app_name"
        >
        <argument
            android:name="@string/attraction_id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mason.touristattractionshw.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mason.touristattractionshw.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>